--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <img src="assets/HP1.jpg" title="Harry Potter" lang="en" alt="Harry Potter">
 <p style="text-align: justify;">
     <h1>Hrvoje Mahovic</h1>
+    <h2>parcijalni ispit</h2>
     Harry Potter i Kamen mudraca prva je od sedam knjiga iz serijala o Harryju
     Potteru autorice J. K. Rowling. Knjiga je prvi put objavljena 26. lipnja
     1997. u izdanju Bloomsbury Publishinga, a kasnije je po njoj snimljen i
